# gst-invoice-gym

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  docker-compose.yml  inference.py  models.py  openenv.yaml  pyproject.toml  pytest.ini  requirements.txt  task_definitions.py
data/: invoices.json
demo/: app.py
env/: __init__.py  invoice_gym.py  models.py  utils.py
server/: Dockerfile  app.py  gst_invoice_dashboard.py  gst_invoice_gym_environment.py
tests/: test_environment.py  test_inference_config.py
